# URO_P2

./: .gitignore  Bill.h  Billitem.h  CMakeLists.txt  Customer.h  Item.h  Order.h  User.h  bills_widget.cpp  bills_widget.h  bills_widget.ui  gui.cpp  gui.h  gui.ui  login_widget.cpp  login_widget.h  login_widget.ui  main.cpp  orders_widget.cpp  orders_widget.h  orders_widget.ui  orders_widget.ui.old  stock_widget copy.ui  stock_widget.cpp  stock_widget.h  stock_widget.ui
qtcreator/projekt_krc0071_qt/: gui.ui  login_widget.ui  main.cpp  projekt_krc0071_qt.pro
